--- a/LoginService/src/main/resources/application.properties
+++ b/LoginService/src/main/resources/application.properties
@@ -5,3 +5,5 @@ quarkus.datasource.password=quarkus
 quarkus.datasource.jdbc.url = jdbc:mysql://127.0.0.2:3306/quarkus
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.database.generation = drop-and-create
+
+smallrye.jwt.sign.key.location=classpath:jwt/privateKey.pem
